to do list ready - missing checkboxes

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 <body>
   <section class="container">
     <!-- SITE CONTENT -->
+    <h1 class="main-title">To Do List</h1>
+    <p style="text-align: center;">
+      <input type="text" class="input-new-task">
+      <button class="btn-add-task">Add Task</button>
+    </p>
+
+    <ul class="tasks"></ul>
   </section>
 
   <script src="./assets/js/main.js"></script>
